# xv6-public

./: .clangd  .gdbinit  CMakeLists.txt  Makefile  README-IDE-SETUP.md  XV6_DEBUG_GUIDE.md  bootasm.S  compile_commands.json  debug_xv6.sh  hello  hello.c  hello.nosht
